# fridge_project

./: LICENSE  README.md  _model_training.ipynb  main.py  pyproject.toml  rescale_photos.ipynb
calculations/: data_preparation.ipynb  final_model_evaluation.ipynb  results_visualization.ipynb
food-recognition-2022/: data_preparation copy.ipynb  description.md  final_model_evaluation.ipynb  results_visualization.ipynb
fruits/: dataset_preparation.ipynb  fruits_classifier_training.ipynb  fruits_detection_training.ipynb  fruits_training.ipynb  project_explanation.md
models/fruits_classifier/: classes.txt
results/fruit_segmentation/: result_1.json  result_Banana 4_r1_170_100.json  result_Banana 4_r1_242_100.json  result_Cantaloupe 1_r_213_100.json  result_Cantaloupe 2_306_100.json  result_Carrot 1_r0_116_100.json  result_Granadilla 1_r_245_100.json  result_Hazelnut 1_r_263_100.json  result_Kohlrabi 1_r_249_100.json  result_Strawberry Wedge 1_r2_93_100.json  result_all-3.json
runs/food_seg_model/food_recognition/: args.yaml
runs/food_seg_model/food_recognition2/: args.yaml  results.csv
runs/food_seg_model/food_recognition2/weights/best_openvino_model/: best.xml  metadata.yaml
runs/fruits_classification/: args.yaml  results.csv
runs/fruits_classification/weights/: best.pt  last.pt
runs/fruits_detection/: args.yaml  results.csv
